# ECE361_TextConference

./: CMakeLists.txt  client  client-server.drawio  client.c  makefile  message.h  server  server.c  sessionDB.h  usrDB.h
database/: sessionDB.c  sessionDB.h  userDB.txt  usrDB.c  usrDB.h
include/: message.h  sessionDB.h  usrDB.h  var.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: client.c  main.c  server.c  sessionDB.c  usrDB.c
